--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,6 @@ android {
 }
 
 dependencies {
-    implementation'com.theartofdev.edmodo:android-image-cropper'
     implementation'de.hdodenhof:circleimageview:3.0.0'
     implementation'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -44,7 +43,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.navigation:navigation-fragment:2.2.2'
     implementation 'androidx.navigation:navigation-ui:2.2.2'
-ll    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
